<resources>
    <string name="app_name">My Application</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_up">Register</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="date_amp_time"><![CDATA[Date & Time]]></string>
    <string name="meeting_time">Meeting Time</string>
    <string name="group_name">Group Name</string>
    <string name="name">Name</string>
    <string name="create_group">Create Group:</string>
    <string name="course_name">Course Name</string>
    <string name="date_time"><![CDATA[Date & TIme]]></string>
    <string name="ex_bio_study_group">ex - Bio Study Group</string>
    <string name="ex_intro_to_biology">ex- Intro to Biology</string>
    <string name="ex_bio_111">ex- BIO 111</string>
    <string name="course_id">Course ID</string>
    <string name="create">Create</string>
    <string name="course_id_ex_biol_111">Course ID (ex- BIOL 111)</string>
    <string name="course_name_ex_intro_to_biology">Course Name (ex- Intro to Biology)</string>
    <string name="meeting_date_time"><![CDATA[Meeting Date & Time]]></string>
    <string name="group_name_ex_bio_sudy_group">Group Name (ex: Bio Sudy Group)</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="title_activity_notification">Notification</string>
    <string name="day_of_the_week">Day of the Week</string>
    <string name="group_meeting_day_ex_thursday">Group Meeting Day (ex- Thursday)</string>
    <string name="meeting_day_ex_thursday">Meeting Day (ex - Thursday)</string>
    <string name="create_group1">Create Group</string>
    <string name="time_ex_04_30pm">Time (ex - 04:30pm)</string>
    <string name="create_group2">Create Group</string>
</resources>
